--- a/Exerciocio_final.ipynb
+++ b/Exerciocio_final.ipynb
@@ -413,7 +413,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x17464fcf8e0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1b0e5be2940>"
       ]
      },
      "execution_count": 17,
@@ -635,23 +635,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'd1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-29-964581874a86>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#gostam de caminhar no final de semana\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0md1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'd1' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Qtd_Pessoas</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pessoa</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Qtd_Pessoas\n",
+       "Pessoa             \n",
+       "False            26\n",
+       "True              3"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#gostam de caminhar no final de semana\n"
+    "#gostam de caminhar no final de semana\n",
+    "Caminhada = dict(Counter(novo_df.lazer_final_de_semana.str.contains('caminhar')))\n",
+    "\n",
+    "pessoas_df = pessoas_df.groupby(by='Pessoa').sum()\n",
+    "pessoas_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nome</th>\n",
+       "      <th>sobrenome</th>\n",
+       "      <th>ano_nascimento</th>\n",
+       "      <th>sexo</th>\n",
+       "      <th>cidade</th>\n",
+       "      <th>profissão</th>\n",
+       "      <th>experiencia profissional</th>\n",
+       "      <th>estado_civil</th>\n",
+       "      <th>filhos</th>\n",
+       "      <th>lazer_final_de_semana</th>\n",
+       "      <th>...</th>\n",
+       "      <th>qual_esporte</th>\n",
+       "      <th>quanta_vezes_na_semana_pratica_esporte</th>\n",
+       "      <th>tem carro</th>\n",
+       "      <th>escolaridade</th>\n",
+       "      <th>ano_atual</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Profissões</th>\n",
+       "      <th>salario até 3 anos</th>\n",
+       "      <th>salaior +3 anos</th>\n",
+       "      <th>Por pessoa</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Dirceu</td>\n",
+       "      <td>Manolo</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>Masc</td>\n",
+       "      <td>São Vicente</td>\n",
+       "      <td>Cientista de Dados</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Casado</td>\n",
+       "      <td>1</td>\n",
+       "      <td>estudar, academia, jogar video game,surfar</td>\n",
+       "      <td>...</td>\n",
+       "      <td>academia</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>sim</td>\n",
+       "      <td>Ensino Superior</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Cientista de Dados</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>14000</td>\n",
+       "      <td>$ BRL</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     nome sobrenome  ano_nascimento  sexo       cidade           profissão  \\\n",
+       "0  Dirceu    Manolo            1985  Masc  São Vicente  Cientista de Dados   \n",
+       "\n",
+       "   experiencia profissional estado_civil  filhos  \\\n",
+       "0                         4       Casado       1   \n",
+       "\n",
+       "                        lazer_final_de_semana  ... qual_esporte  \\\n",
+       "0  estudar, academia, jogar video game,surfar  ...     academia   \n",
+       "\n",
+       "  quanta_vezes_na_semana_pratica_esporte  tem carro     escolaridade  \\\n",
+       "0                                    3.0        sim  Ensino Superior   \n",
+       "\n",
+       "  ano_atual  Idade          Profissões salario até 3 anos  salaior +3 anos  \\\n",
+       "0      2020     35  Cientista de Dados              10000            14000   \n",
+       "\n",
+       "   Por pessoa  \n",
+       "0       $ BRL  \n",
+       "\n",
+       "[1 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "novo_df.hr"
    ]
   },
   {
